--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <input type="text" id='a'>
+  <input type="text" id='b'>
+  <button id="sum">сумма</button>
+  <button id="mult">произведение</button>
+  <input type="text" id='res'>
+  <div class="task">
+    Решить задачу где возможно используй <b>this</b><br>
+    В объект можно добавлять свои свойства<br>
+    Есть объект calculator с тремя методами:
+    <ul>
+      <li>sum() возвращает сумму этих двух значений</li>
+      <li>mult() возвращает произведение этих двух значений</li>
+      <li>show() выводит результат вычислений в инпут ".res" объекта</li>
+    </ul>
+  </div>
+
+  <h3>Форкните доску чтобы её сохранить у себя на доске</h3>
+  <h4>Для этого предварительно надо зарегистрироваться на codepen</h4>
+  <!-- <img border="1" src="http://dl4.joxi.net/drive/2020/04/17/0032/1298/2123026/26/fe01b568c8.jpg" alt=""> -->
   <script src="main.js"></script>
 </body>
 
