create getResult in js

--- a/index.html
+++ b/index.html
@@ -9,23 +9,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <input type="text" id='a'>
-  <input type="text" id='b'>
-  <button id="sum">сумма</button>
-  <button id="mult">произведение</button>
-  <input type="text" id='res'>
-  <div class="task">
-    Решить задачу где возможно используй <b>this</b><br>
-    В объект можно добавлять свои свойства<br>
-    Есть объект calculator с тремя методами:
-    <ul>
-      <li>sum() возвращает сумму этих двух значений</li>
-      <li>mult() возвращает произведение этих двух значений</li>
-      <li>show() выводит результат вычислений в инпут ".res" объекта</li>
-    </ul>
-  </div>
-
+<body>Написать функцию которая принимает 2 целых числа <b>x</b> и <b>y</b>
+  <br>
+  Функция должна вычислять сумму цифр результата <b>x</b> в степени <b>y</b>.
+  <br>
+  Например вызов<br>
+  getResult(4, 8) -->> 25 <br>
+  4<sup><small>8</small></sup> = 65536, а сумма его цифр составляет 6 + 5 + 5 + 3 + 6 = 25.
+  <br>
   <h3>Форкните доску чтобы её сохранить у себя на доске</h3>
   <h4>Для этого предварительно надо зарегистрироваться на codepen</h4>
   <!-- <img border="1" src="http://dl4.joxi.net/drive/2020/04/17/0032/1298/2123026/26/fe01b568c8.jpg" alt=""> -->
